# soliddb

./: Cargo.toml  README.md
soliddb/: Cargo.toml
soliddb-derive/: Cargo.toml
soliddb-derive/src/: lib.rs
soliddb/src/: error.rs  index.rs  iter.rs  keys.rs  lib.rs  single.rs  table.rs
soliddb/tests/: enums.rs  indices.rs  migration.rs  singles.rs  table.rs
